--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Assing config.py file
+config.py
+
+#Adding other files
+API_practice.ipynb
+random_numbers.ipynp
+
+#Adding DS-Store
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
